--- a/app/css/main.css
+++ b/app/css/main.css
@@ -6,6 +6,12 @@ Version: 1.0
 Date: 2013-04-02
 */
 
+html,
+body {
+    width: 100vw;
+    height: 100vh;
+}
+
 .hljs {
     display: block;
     overflow-x: auto;
