MAINT: Add license header to all files
Address @ebolyen's comments

--- a/app/css/JobHistory.css
+++ b/app/css/JobHistory.css
@@ -1,3 +1,13 @@
+/*
+----------------------------------------------------------------------------
+Copyright (c) 2016--, QIIME development team.
+
+Distributed under the terms of the Modified BSD License.
+
+The full license is in the file LICENSE, distributed with this software.
+----------------------------------------------------------------------------
+*/
+
 .table {
     table-layout: fixed;
     word-wrap: break-word;
