--- a/app/css/JobRunning.css
+++ b/app/css/JobRunning.css
@@ -1,4 +1,14 @@
 /*
+----------------------------------------------------------------------------
+Copyright (c) 2016--, QIIME development team.
+
+Distributed under the terms of the Modified BSD License.
+
+The full license is in the file LICENSE, distributed with this software.
+----------------------------------------------------------------------------
+*/
+
+/*
 A Pen created at CodePen.io. You can find this one at
 http://codepen.io/albebonv/pen/DehCH.
 
